# Project-allotment-system-in-c

./: Allotment.c  Allotment.h  CMakeLists.txt  Information.txt  InputEmp.c  InputEmp.h  InputProject.c  README.md  Utility.c  Utility.h  aDbHelper.c  aDbHelper.h  aMain.c  aUserLogin.c  aUserLogin.h  addEmployee.c  addEmployee.h  addProject.c  addProject.h  allotment.c  allotment.h  allotmentTask.c  allotmentTask.h  auserInterface.c  auserInterface.h  client.txt  databaseHelper.c  databaseHelper.h  databaseHelper2.c  databaseHelper2.h  employee.txt  flow.c  flow.h  foo.c  foo.h  inputEmpTask.c  inputEmpTask.h  inputEmployee.c  inputEmployee.h  inputProject.c  (+15 more)
